<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/about_name"
        style="@style/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_name"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/about_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/about_star"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/about_nickname"
        style="@style/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/about_hint_nickname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#78909C" />

    <Button
        android:id="@+id/nickname_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_done"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/nickname_textView"
        style="@style/layout_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <TextView
            android:id="@+id/bio_text"
            style="@style/layout_textView"
            android:text="@string/about_bio" />
    </ScrollView>
</LinearLayout>